--- a/May5_1100_Rpackages/R-packages.Rmd
+++ b/May5_1100_Rpackages/R-packages.Rmd
@@ -196,15 +196,15 @@ twin_dia2 <- twin_dia %>%
   rename(heavy = intensity_h, light = intensity_l) %>% 
   gather(label, intensity, heavy, light)
 
-exp1 <- ProtExp(protein=twin_dia2$protein,
+twin_dia3 <- ProtExp(protein=twin_dia2$protein,
                                feature=twin_dia2$feature,
                                run=twin_dia2$run,
                                intensity=twin_dia2$intensity,
                                label=twin_dia2$label)
-head(exp1)
-exp1norm <- normalize(exp1, by="heavy")
-head(summary(exp1norm)[,,"light"])
-plot(exp1norm)
+head(twin_dia3)
+twin_dia3 <- normalize(twin_dia3, by="heavy")
+head(summary(twin_dia3)[,,"light"])
+plot(twin_dia3)
 ```
 
 ## Testing packages
