--- a/May5_1530_scalability/scalability.Rmd
+++ b/May5_1530_scalability/scalability.Rmd
@@ -182,14 +182,51 @@ Compounding this difficulty, the frequency with which R makes copies of objects 
 
 However, there are a growing number of packages dedicated to working with large datasets in R, both in-memory and on-disk.
 
-- `bigmemory` on CRAN
-    + Uses shared memory to allow 
+- __bigmemory__ on CRAN
+    + Uses shared memory to allow sharing of in-memory objects between R sessions
+    + Also supports file-backed matrices in flat files
+    + Extended by __bigalgebra__ and __biganalytics__ packages
 
-- `ff` on CRAN
+- __ff__ on CRAN
+    + Uses on-disk flat files for data storage
+    + Extended by __ffbase__
 
-- `matter` on Bioconductor
+- __matter__ on Bioconductor
+    + Uses on-disk files for data storage
+    + Supports custom data formats
 
-- `HDF5Array` on Bioconductor
+Although example `twin_dia` dataset is not very large, we will pretend that it is. If `twin_dia` were several GB (instead of several MB), how would we analyze it? Keep in mind that even if the data itself fits in memory, analyzing it will use additional memory overhead, so analysis may be impossible if the data is very large.
+
+#### Using bigmemory
+
+```{r}
+library(bigmemory)
+
+bm <- big.matrix(nrow=nrow(twin_dia3), 
+                            ncol=ncol(twin_dia3),
+                            dimnames=dimnames(twin_dia3))
+for ( nm in names(twin_dia3) )
+  bm[,nm] <- twin_dia3[[nm]]
+
+bm
+head(bm)
+```
+
+Note that __bigmemory__ does not support `factor` types, so these are converted to numeric types.
+
+If `twin_dia3` did not fit into memory, we would have to find another way to pull the data into R. __bigmemory__ provids a `read.big.matrix` for efficiently reading large ASCII files into a `big.matrix` object.
+
+```{r}
+cl <- makePSOCKcluster(detectCores())
+desc <- describe(bm)
+clusterExport(cl, "desc")
+fit_dia$fit3 <- parLapply(cl, levels(twin_dia3$protein),  function(protein)
+{
+  bm.local <- attach.big.matrix(desc)
+  
+})
+stopCluster(cl)
+```
 
 ## Writing C and C++ code for R
 
@@ -205,7 +242,272 @@ There are three common ways to write C or C++ code for R:
 
 - `Rcpp` package
 
-Examples:
+We will explore these frameworks using a custom function for finding the median of a numeric vector.
 
-- TODO: Add examples
+```{r}
+my_median <- function(x, na.rm = FALSE) {
+  med <- numeric(0)
+  for ( i in seq_along(x) ) {
+    if ( is.na(x[i]) ) {
+      if ( na.rm ) {
+        next
+      } else {
+        return(NA)
+      }
+    }
+    lesser <- 0
+    greater <- 0
+    for ( j in seq_along(x) ) {
+      if ( is.na(x[j]) )
+        next
+      if ( x[j] < x[i] ) {
+        lesser <- lesser + 1 
+      } else if ( x[j] > x[i] ) {
+        greater <- greater + 1
+      }
+    }
+    if ( lesser == greater || abs(lesser - greater) == 1 )
+      med <- c(med, x[i])
+  }
+  if ( length(med) > 1 ) {
+    (med[1] + med[2]) / 2 
+  } else {
+    med
+  }
+}
+```
+
+This function is a good candidate for possibly rewriting in a more efficient language like C or C++ because it is reliant on multiple `for` loops that cannot be easily vectorized.
+
+```{r}
+library(microbenchmark)
+x <- sample(100)
+microbenchmark(median(x), my_median(x))
+```
+
+We can see that our pure-R version is significantly slower than the one provided by the __stats__ package, which uses C code. If the __stats__ package version of `median` didn't exist, how could we make our own version faster?
+
+#### Using the `.C` framework
+
+- Simple and easy to use (if you like C)
+
+- Only allows basic C types (`int`, `double`, etc.)
+
+- Only out parameters, no return values
+
+- All arguments are duplicated
+
+```{}
+#include <R.h>
+#include <stdlib.h>
+
+void C_median(double * x, int * n, double * med) {
+  int lesser, greater, found = 0;
+  for ( int i = 0; i < *n; i++ ) {
+    lesser = 0;
+    greater = 0;
+    for ( int j = 0; j < *n; j++ ) {
+      if ( x[j] < x[i] )
+        lesser++;
+      else if ( x[j] > x[i] )
+        greater++;
+    }
+    if ( lesser == greater || abs(lesser - greater) == 1 ) {
+      if ( *n % 2 != 0 ) {
+        *med = x[i];
+        break;
+      }
+      else {
+        if ( found == 0 ) {
+          found++;
+          *med = x[i];
+        } else {
+          *med += x[i];
+          *med /= 2.0;
+          break;
+        }
+      }
+    }
+  }
+}
+```
+
+`.C` returns a list the same length as the number of arguments passed to out. `.C` cannot return values, so out parameters must be used.
+
+This is saved as `src/C_median.c`. We can compile it using `R CMD SHLIB`, load it using `dyn.load`, and call it using `.C`.
+
+We must provide a third argument as the out-parameter.
+
+```{r}
+system("R CMD SHLIB src/C_median.c")
+dyn.load("src/C_median.so")
+.C("C_median", as.double(x), length(x), numeric(1))[[3]]
+```
+
+`.C` is useful for small utility functions such as our `C_median` function, but these limitations make it impractical for many applications. Another major limitation is that `.C` cannot handle missing and special values (NA/NaN/Inf).
+
+#### Using the .Call framework
+
+- More difficult to use, requires some knowledge of R internals
+
+- Allows any R object
+
+- Can return R objects
+
+- More control over allocation of memory
+
+```{}
+#include <R.h>
+#include <Rdefines.h>
+#include <stdlib.h>
+
+SEXP Call_median(SEXP x) {
+  int lesser, greater, found = 0;
+  int n = LENGTH(x);
+  SEXP med;
+  PROTECT(med = NEW_NUMERIC(1));
+  double * pmed = REAL(med);
+  double * px = REAL(x);
+  for ( int i = 0; i < n; i++ ) {
+    lesser = 0;
+    greater = 0;
+    for ( int j = 0; j < n; j++ ) {
+      if ( px[j] < px[i] )
+        lesser++;
+      else if ( px[j] > px[i] )
+        greater++;
+    }
+    if ( lesser == greater || abs(lesser - greater) == 1 ) {
+      if ( n % 2 != 0 ) {
+        *pmed = px[i];
+        break;
+      }
+      else {
+        if ( found == 0 ) {
+          found++;
+          *pmed = px[i];
+        } else {
+          *pmed += px[i];
+          *pmed /= 2.0;
+          break;
+        }
+      }
+    }
+  }
+  UNPROTECT(1);
+  return med;
+}
+```
+
+In the `.Call` framework, we work directly with R objects. These are all represented as the type `SEXP` in C. All arguments passed to `.Call` will be a `SEXP`. We can manipulate `SEXP` objects using R internal functions and macros. These are documented in the R internals manual (https://cran.r-project.org/doc/manuals/r-release/R-ints.html).
+
+If you download the source code for R 3.4.0 ("You Stupid Darkness"), it is very helpful to look at the files `R-3.4.0/src/include/Rdefines.h` and `R-3.4.0/src/include/Rinternals.h`.
+
+In the above code, we use `REAL()` to get a pointer to a numeric vector's data. To get a pointer to the data of an integer vector, we would use the `INTEGER()` macro.
+
+We create a new length-1 numeric vector to return by doing `NEW_NUMERIC`. Whenever we create a new R object in the `.Call` framework, we must `PROTECT` it from R's garbage collector, and remember to `UNPROTECT` it later.
+
+This code is saved as `src/Call_median.c`. Again, we compile it using `R CMD SHLIB`, load it using `dyn.load`, and call it using `.Call`.
+
+```{r}
+system("R CMD SHLIB src/Call_median.c")
+dyn.load("src/Call_median.so")
+.Call("Call_median", as.numeric(x))
+```
+
+In this case, we still have to coerce `x` to a numeric (double) vector, because `x` is an integer vector, and we assumed `x` is a double in our `Call_median` C function. If `x` were already a numeric vector, we could simply pass `x` to `.Call`.
+
+The `.Call` framework offers much more power than the `.C` framework, but the required familiarity with R internals can make it difficult and clunky to use.
+
+#### Using the __Rcpp__ package
+
+- Easiest to use
+
+- Allows most R object
+
+- Can return R objects
+
+- All the power of C++ and the STL
+
+```{}
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+double Rcpp_median(NumericVector x) {
+  int lesser, greater, found = 0;
+  int n = x.size();
+  double med;
+  for ( int i = 0; i < n; i++ ) {
+    lesser = 0;
+    greater = 0;
+    for ( int j = 0; j < n; j++ ) {
+      if ( x[j] < x[i] )
+        lesser++;
+      else if ( x[j] > x[i] )
+        greater++;
+    }
+    if ( lesser == greater || abs(lesser - greater) == 1 ) {
+      if ( n % 2 != 0 ) {
+        med = x[i];
+        break;
+      }
+      else {
+        if ( found == 0 ) {
+          found++;
+          med = x[i];
+        } else {
+          med += x[i];
+          med /= 2.0;
+          break;
+        }
+      }
+    }
+  }
+  return med;
+}
+```
+
+__Rcpp__ provides easy-to-use C++ wrappers for most R data types (such as `NumericVector`) which behave similarly to familiar STL containers like `std::vector<T>`.
+
+Using __Rcpp__ means we can write standard C++ code without having to worry about R internals and `PROTECT`-ing our objects, because __Rcpp__ takes care of these things for us.
+
+This code is saved as `src/Rcpp_median.cpp`. We compile it using the __Rcpp__ function `sourceCpp` and can call it directly using the same name as the C++ function.
+
+```{r}
+library(Rcpp)
+sourceCpp("src/Rcpp_median.cpp")
+Rcpp_median(x)
+```
+
+Note that we don't even have to worry about whether `x` is an integer or double here!
+
+#### Putting it all together
+
+__Rcpp__ provides us with an R function with the same name as our C++ function, but `.C` and `.Call` must be wrapped in `.C` or `.Call`. Therefore, when using these, it is good form to provide an R wrapper function.
+
+```{r}
+C_median <- function(x) {
+  .C("C_median", as.double(x), length(x), numeric(1))
+}
+
+Call_median <- function(x) {
+  .Call("Call_median", as.numeric(x))
+}
+```
+
+Now we can compare the performance of all of these functions.
+
+```{r}
+microbenchmark(median(x),
+               my_median(x),
+               C_median(x),
+               Call_median(x),
+               Rcpp_median(x))
+```
+
+All of our versions using C or C++ are much faster than our pure-R version (the built-in `median` from the __stats__ package uses C code).
+
+Note that `Call_median` and `Rcpp_median` are likely faster than `C_median` because the arguments don't get duplicated. Note that `Rcpp_median` is likely only faster than R's own `median` function because we do less error checking and exception handling. For example, our own C/C++ functions do not handle NAs.
+
 
